` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/LocalActivityStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title LocalActivity State Transitions

[*] --> CREATED
CREATED --> REPLAYING: CHECK_EXECUTION_STATE
CREATED --> EXECUTING: CHECK_EXECUTION_STATE
EXECUTING --> REQUEST_PREPARED: SCHEDULE
MARKER_COMMAND_CREATED --> RESULT_NOTIFIED: RECORD_MARKER
REPLAYING --> WAITING_MARKER_EVENT: SCHEDULE
REQUEST_PREPARED --> REQUEST_SENT: MARK_AS_SENT
REQUEST_PREPARED --> REQUEST_PREPARED: NON_REPLAY_WORKFLOW_TASK_STARTED
REQUEST_SENT --> REQUEST_SENT: NON_REPLAY_WORKFLOW_TASK_STARTED
REQUEST_SENT --> MARKER_COMMAND_CREATED: HANDLE_RESULT
RESULT_NOTIFIED --> MARKER_COMMAND_RECORDED: MARKER_RECORDED
WAITING_MARKER_EVENT --> MARKER_COMMAND_RECORDED: MARKER_RECORDED
WAITING_MARKER_EVENT --> REQUEST_PREPARED: NON_REPLAY_WORKFLOW_TASK_STARTED
MARKER_COMMAND_RECORDED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
